--- a/examples/Geant4/CerenkovMinimal/CMakeLists.txt
+++ b/examples/Geant4/CerenkovMinimal/CMakeLists.txt
@@ -3,6 +3,11 @@ set(name CerenkovMinimal)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
+    cmake_policy(SET CMP0077 OLD)
+endif()
+
+
 find_package( G4OK CONFIG REQUIRED )
 
 set(SOURCES
