nnode::apply_centering apply_placement and BOpticks standin for resource access from lower levels beneath okc as demoed in NCSG2Test

--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -62,6 +62,7 @@ set(SOURCES
   BTree.cc
   BEnv.cc
   BResource.cc
+  BOpticks.cc
   BOpticksResource.cc
   BOpticksKey.cc
   BDynamicDefine.cc
@@ -109,6 +110,7 @@ set(HEADERS
   BRegex.hpp
   BEnv.hh
   BResource.hh
+  BOpticks.hh
   BOpticksResource.hh
   BOpticksKey.hh
   BDynamicDefine.hh
