identify cause of assert during CMaker back translation of lvidx16 to be the tree balancing, which yields left transforms by shuffling primitives : rejig X4PhysicalVolume::convertSolids_r to also add unbalanced to GMeshLib

--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -35,6 +35,7 @@ set(TEST_SOURCES
     GTransformsTest.cc
     GIdsTest.cc
     GItemIndexTest.cc
+    GItemIndex2Test.cc
     GTreePresentTest.cc
     GCSGTest.cc
     GPartsTest.cc
