--- a/ggeo/tests/CMakeLists.txt
+++ b/ggeo/tests/CMakeLists.txt
@@ -39,6 +39,8 @@ set(TEST_SOURCES
     GTreePresentTest.cc
     GCSGTest.cc
     GPartsTest.cc
+    GPtsTest.cc
+    GPtTest.cc
     GGeoNCSGTest.cc
 
     GPmtTest.cc
