--- a/integration/tests/CMakeLists.txt
+++ b/integration/tests/CMakeLists.txt
@@ -4,6 +4,26 @@ project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
 
+find_package(SysRap REQUIRED CONFIG)
+
+set(TEST_SOURCES
+    IntegrationTest.cc
+)
+
+foreach(SRC ${TEST_SOURCES})
+    get_filename_component(TGT ${SRC} NAME_WE)
+    add_executable(${TGT} ${SRC})
+
+    add_test(${name}.${TGT} ${TGT})
+
+    target_link_libraries(${TGT} PUBLIC 
+          Opticks::SysRap
+    )
+    install(TARGETS ${TGT} DESTINATION lib)
+endforeach()
+
+
+
 set(SCRIPT tboolean.sh)
 get_filename_component(TGT ${SCRIPT} NAME_WE)
 set(ARG box)
