unaligned proxy scan deviations suggest should jump into aligned deviation checking, improve python analysis machinery, enable colored python logging, record WITH switches into metadata

--- a/optickscore/tests/CMakeLists.txt
+++ b/optickscore/tests/CMakeLists.txt
@@ -29,6 +29,7 @@ set(TEST_SOURCES
     OpticksPrepareInstallCache_OKC.cc
     OpticksAnaTest.cc
     OpticksDbgTest.cc
+    OpticksSwitchesTest.cc
 
     CompositionTest.cc
     ViewTest.cc
