using newer bash 5.0.7 fails to avoid the issue with tboolean-box integration test on macOS, resolve the issue, it was due to a different OPTICKS_KEY on macOS

--- a/integration/tests/CMakeLists.txt
+++ b/integration/tests/CMakeLists.txt
@@ -25,12 +25,19 @@ endforeach()
 
 
 set(SCRIPT tboolean.sh)
+#set(SCRIPT fn.sh)
 get_filename_component(TGT ${SCRIPT} NAME_WE)
 set(LV box)
 
 set(TEST ${name}.${TGT}.${LV})
 add_test(${TEST} ${SCRIPT} )
 set_tests_properties(${TEST} PROPERTIES ENVIRONMENT "LV=${LV}")
+
+
+
+
+
+
 
 
 #[=[
