fixed the TO NA MI issue notes/issues/tboolean-g4-TO-NA-MI.rst twas due to unset m_bbox in NCSGList when no container was used

--- a/integration/tests/CMakeLists.txt
+++ b/integration/tests/CMakeLists.txt
@@ -30,7 +30,7 @@ get_filename_component(TGT ${SCRIPT} NAME_WE)
 set(LV box)
 
 set(TEST ${name}.${TGT}.${LV})
-add_test(${TEST} ${SCRIPT} )
+add_test(${TEST} ${SCRIPT} --generateoverride 10000)
 set_tests_properties(${TEST} PROPERTIES ENVIRONMENT "LV=${LV}")
 
 
