TCURAND a high level class for using GPU generated CURAND randoms on the host, enabling GPU and CPU to use the same randoms

--- a/thrustrap/CMakeLists.txt
+++ b/thrustrap/CMakeLists.txt
@@ -22,6 +22,8 @@ set(SOURCES
 
     THRAP_LOG.cc
 
+    TCURAND.cc
+    TCURANDImp.cu
     TBuf_.cu
     TBufPair_.cu
     TRngBuf_.cu
@@ -39,6 +41,8 @@ SET(HEADERS
     THRAP_PUSH.hh
     THRAP_POP.hh
 
+    TCURAND.hh
+    TCURANDImp.hh
     TBuf.hh
     TRngBuf.hh
     TBufPair.hh
