--- a/examples/UseThrustRap/CMakeLists.txt
+++ b/examples/UseThrustRap/CMakeLists.txt
@@ -3,6 +3,13 @@ set(name UseThrustRap)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+
+if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
+    cmake_policy(SET CMP0077 OLD)
+endif()
+
+
+
 find_package(ThrustRap REQUIRED CONFIG)
 
 echo_target_std(Opticks::ThrustRap)
