debugging random consumption in the tail, bouncemax position limit causes discrepant truncation even though its appearing to align the tail consumption, add BLog for some automation of single photon debugging without lldb

--- a/boostrap/CMakeLists.txt
+++ b/boostrap/CMakeLists.txt
@@ -50,6 +50,7 @@ set(SOURCES
   Map.cc
   BParameters.cc 
   BTxt.cc
+  BLog.cc
   BPropNames.cc
 
   BList.cc
@@ -98,6 +99,7 @@ set(HEADERS
   Map.hh
   BParameters.hh 
   BTxt.hh
+  BLog.hh
   BPropNames.hh
 
 
