continued shakedown adding python scripts to the install, now at 15/412 fails from binary dist see notes/issues/shakedown-running-from-binary-dist.rst

--- a/npy/CMakeLists.txt
+++ b/npy/CMakeLists.txt
@@ -142,6 +142,7 @@ set(SOURCES
     BoundariesNPY.cpp
     MaterialLibNPY.cpp
     DummyPhotonsNPY.cpp
+    DummyGenstepsNPY.cpp
 
     PyMCubes/marchingcubes.cpp
     NMarchingCubesNPY.cpp
@@ -253,6 +254,9 @@ RecordsNPY.hpp
 BoundariesNPY.hpp
 MaterialLibNPY.hpp
 DummyPhotonsNPY.hpp
+DummyGenstepsNPY.hpp
+
+
 SequenceNPY.hpp
 SeqNPY.hpp
 AxisNPY.hpp
