--- a/integration/CMakeLists.txt
+++ b/integration/CMakeLists.txt
@@ -3,7 +3,12 @@ set(name Integration)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+set(SCRIPTS
+   tests/tboolean.bash
+)
 
+install(FILES integration.bash DESTINATION integration)
+install(FILES ${SCRIPTS}       DESTINATION integration/tests)
 
 add_subdirectory(tests)
 
