--- a/ana/CMakeLists.txt
+++ b/ana/CMakeLists.txt
@@ -9,18 +9,40 @@ get_filename_component(PARENT_DIR ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
 set(SCRIPTS
 
    __init__.py
+   nbase.py
    enum.py
+   base.py
+   debug.py
    num.py
    log.py
+   level.py
+   qdv.py
+   ctx.py
+   make_rst_table.py
+   abstat.py
+   cfh.py
    dat.py
    bpath.py
    key.py
    env.py
    OpticksQuery.py
-   base.py
    main.py
    nload.py
    proplib.py
+   seq.py
+   decompression.py
+   histype.py
+   mattype.py
+   hismask.py
+   datedfolder.py
+   metadata.py
+   nibble.py
+   evt.py
+   profile.py
+   absmry.py
+   ab.py
+   tboolean.py
+
 )
 
 install(PROGRAMS ${PARENT_DIR}/__init__.py  DESTINATION py/opticks)
