split off ana/profilesmrytab.py as start to generalize scan result handling,  remove 67.1M photon ceiling caused by cycling unsigned int by adoption of unsigned long long across buffer handling in npy,cudarap,thrap,oxrap

--- a/optixrap/tests/CMakeLists.txt
+++ b/optixrap/tests/CMakeLists.txt
@@ -29,6 +29,8 @@ set(PAIRED_TEST_SOURCES  # tests with paired cc and cu
     downloadTest.cc
     eventTest.cc
     interpolationTest.cc
+    ORngTest.cc
+
 
 )
 
