investigate Sams x375 : a height 253 unbalanced tree with 507 nodes that breaks balancing : add GDML snippet reading capability to X4GDMLParser

--- a/extg4/CMakeLists.txt
+++ b/extg4/CMakeLists.txt
@@ -50,6 +50,8 @@ set(SOURCES
 
     X4GDMLParser.cc
     X4GDMLWriteStructure.cc
+    X4GDMLReadStructure.cc
+    X4SolidStore.cc
 
     X4Material.cc
     X4MaterialTable.cc
@@ -101,6 +103,8 @@ set(HEADERS
 
     X4GDMLParser.hh
     X4GDMLWriteStructure.hh
+    X4GDMLReadStructure.hh
+    X4SolidStore.hh
 
     X4Material.hh
     X4MaterialTable.hh
