cmake generalizations to enable user project building such as examples/Geant4/CerenkovMinimal/go.sh against opticks distributed release with dependencies automatically handled, excluding Geant4

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -5,9 +5,10 @@ include(OpticksBuildOptions)
 
 # increasing dependency order
 set(SCRIPTS
-   release.bash
+   opticks-release.bash
    o.sh
    tboolean.sh
+   scan.bash
 )
 
 install(PROGRAMS ${SCRIPTS}   DESTINATION bin)
