exclude xercesc from distrib and provide way to just specify locations

--- a/examples/UseG4OK/CMakeLists.txt
+++ b/examples/UseG4OK/CMakeLists.txt
@@ -8,6 +8,8 @@ if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
 endif()
 
 
+set(OpticksXercesC_VERBOSE ON)
+
 find_package(G4OK CONFIG REQUIRED)   
 
 
