make more /tmp paths overridable with TMP envvar, start looking at non-CMake config via parsing CMake/BCM exported targets with bin/bcm.py

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -6,6 +6,7 @@ include(OpticksBuildOptions)
 # increasing dependency order
 set(SCRIPTS
    opticks-release.bash
+   opticks-site.bash
    o.sh
    tboolean.sh
    scan.bash
