oktar.py for exploding release tarballs with sanity checking asserts

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -7,6 +7,7 @@ include(OpticksBuildOptions)
 set(SCRIPTS
    opticks-release.bash
    opticks-site.bash
+   opticks-site-local.bash
    o.sh
    tboolean.sh
    scan.bash
