opticks-site rearrange to allow overriding the opticks-site-release to for example a new candidate or opticks-dir for a source release

--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -11,9 +11,28 @@ set(SCRIPTS
    o.sh
    tboolean.sh
    scan.bash
+
+   CTestTestfile.py 
+   CMakeModules.py 
+   okdist.py  
+   oktar.py
 )
 
+# top level python needs to go in bin, 
+# but modules that need to be imported must go to py/opticks/bin
+
+
 install(PROGRAMS ${SCRIPTS}   DESTINATION bin)
+
+
+set(PYSCRIPTS
+   __init__.py 
+   CMakeLists.py
+   dist.py
+)
+
+install(PROGRAMS ${PYSCRIPTS}                 DESTINATION py/opticks/bin)
+
 
 add_subdirectory(tests)
 
