explore extremely simple manual approach to handling config in oc.bash with tests in NoCMake example, in preparation for integration with CMT managed builds

--- a/examples/UsePLog/CMakeLists.txt
+++ b/examples/UsePLog/CMakeLists.txt
@@ -3,6 +3,8 @@ set(name UsePLog)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+set(PLog_VERBOSE ON)
+
 find_package(PLog REQUIRED MODULE)
 
 add_executable(${name} ${name}.cc)
