working out how best to setup pkg-config metadata in the CMakeLists.txt, in order to work with BCMPkgConfig without duplication

--- a/examples/UseAssimpRap/CMakeLists.txt
+++ b/examples/UseAssimpRap/CMakeLists.txt
@@ -3,10 +3,12 @@ set(name UseAssimpRap)
 project(${name} VERSION 0.1.0)
 include(OpticksBuildOptions)
 
+set(OpticksAssimp_VERBOSE ON)
+
 find_package(AssimpRap REQUIRED CONFIG)
 
 #set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE) 
-add_executable(${name} ${name}.cc)
-target_link_libraries(${name} Opticks::AssimpRap)
-install(TARGETS ${name}  DESTINATION lib)
+add_executable(${name}Test ${name}.cc)
+target_link_libraries(${name}Test Opticks::AssimpRap)
+install(TARGETS ${name}Test  DESTINATION lib)
 
