double down on the pkg-config based oc.bash approach to non CMake integration with Opticks packages

--- a/npy/CMakeLists.txt
+++ b/npy/CMakeLists.txt
@@ -392,12 +392,16 @@ if(ImplicitMesher_FOUND)
    message(STATUS "NPY.ImplicitMesher_FOUND")
    list(APPEND SOURCES  NImplicitMesher.cpp)
    list(APPEND HEADERS  NImplicitMesher.hpp)
+else()
+   message(STATUS "NPY.ImplicitMesher_NOT_FOUND")
 endif()
 
 if(DualContouringSample_FOUND)
    message(STATUS "NPY.DualContouringSample_FOUND")
    list(APPEND SOURCES  NDualContouringSample.cpp NOctools.cpp)
    list(APPEND HEADERS  NDualContouringSample.hpp NOct.hpp NOctools.hpp)
+else()
+   message(STATUS "NPY.DualContouringSample_NOT_FOUND")
 endif()
 
 if(CSGBSP_FOUND)
