pkg-config wave now reached CUDARap, CUDA version macros around cudaDeviceProp to handle lack of uuid in older CUDA, aiming to keep older OptiX going on macOS for local development convenience only

--- a/examples/UseOpenMesh/CMakeLists.txt
+++ b/examples/UseOpenMesh/CMakeLists.txt
@@ -3,6 +3,9 @@ set(name UseOpenMesh)
 project(${name})
 include(OpticksBuildOptions)
 
+
+set(OpenMesh_VERBOSE ON)
+
 find_package(OpenMesh REQUIRED MODULE)   
 
 message(STATUS "OpenMesh_DIR : ${OpenMesh_DIR} ")
