--- a/optixrap/CMakeLists.txt
+++ b/optixrap/CMakeLists.txt
@@ -8,6 +8,8 @@ if(POLICY CMP0077)  # see note/issues/cmake-3.13.4-FindCUDA-warnings.rst
 endif()
 
 
+#set(PC_VERBOSE ON)
+
 find_package(OKConf     REQUIRED CONFIG)  
 
 set(OptiX_VERBOSE ON)
